--- a/code/src/Plexdata.Utilities.Attributes/Plexdata.Utilities.Attributes.csproj
+++ b/code/src/Plexdata.Utilities.Attributes/Plexdata.Utilities.Attributes.csproj
@@ -6,10 +6,14 @@
     <Copyright>Copyright © 2020 - plexdata.de</Copyright>
     <Description>This library represents a collection of (hopefully) useful attributes.</Description>
     <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
     <PackageIcon>icon.png</PackageIcon>
     <PackageTags>attribute attributes reflection utilities annotation</PackageTags>
+    <PackageReleaseNotes>See project history under https://github.com/akesseler/Plexdata.Utilities.Attributes/blob/master/code/src/HISTORY.md</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/akesseler/Plexdata.Utilities.Attributes</PackageProjectUrl>
+    <Company>plexdata.de</Company>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
